crates/formatter/tests/snapshots/snapshots__migrations__000183_provisionerd_api_version_prefix.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table only provisioner_daemons
	alter column api_version set default '1.0'::text;
update provisioner_daemons set api_version = '1.0' where api_version = 'v1.0';
