crates/formatter/tests/snapshots/snapshots__migrations__000188_workspace_agent_metadata_order.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agent_metadata drop column display_order;
