crates/formatter/tests/snapshots/snapshots__migrations__000188_workspace_agent_metadata_order.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agent_metadata
	add column display_order integer not null default 0;

comment on column workspace_agent_metadata.display_order is 'Specifies the order in which to display agent metadata in user interfaces.';
