crates/formatter/tests/snapshots/snapshots__migrations__000189_workspace_app_order.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_apps drop column display_order;
