crates/formatter/tests/snapshots/snapshots__migrations__000190_template_activity_bump_duration.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table templates
	add column activity_bump bigint default '3600000000000'::bigint not null -- 1 hour
	;

drop view template_with_users;

create view template_with_users as
select
	templates.*,
	coalesce(visible_users.avatar_url, '') as created_by_avatar_url,
	coalesce(visible_users.username, '') as created_by_username
from templates
	left join visible_users on templates.created_by = visible_users.id;

comment on view template_with_users is 'Joins in the username + avatar url of the created by user.';
